--- a/static/css/style.css
+++ b/static/css/style.css
@@ -70,7 +70,7 @@ a {
 .chat-main {
 	display: grid;
 	grid-template-columns: 3fr 1fr;
-
+	flex: 1 0 auto;
 	resize:vertical;
     overflow:auto;
 }
@@ -214,6 +214,32 @@ a {
 }
 
 @media (max-width: 700px) {
+	button > i, a > i {
+		display: none !important;
+	}
+
+	.chat-messages .message {
+		width: 85%;	
+	}
+
+	.chat-header {
+		border-top-left-radius: 0;
+		border-top-right-radius: 0;
+	}
+
+	.chat-form-container {
+		flex-shrink: 0;
+	}
+	
+	.chat-container {
+		max-width:100%; 
+		height: 100vh;
+		margin: 0;
+		overflow: hidden;
+		display: flex;
+		flex-direction: column;
+	}
+
 	.chat-main {
 		display: block;
 	}
